# busybox-w32-shim

./: .cvsignore  .gitignore  CMakeLists.txt  LICENSE  README.md  buildinfo.h  buildinfo.pl  busyboxcmds.pl  configure.bat
.github/workflows/: build.yml
apps/: ar.c  arch.c  ascii.c  ash.c  awk.c  base32.c  base64.c  basename.c  bash.c  bc.c  bunzip2.c  busybox-install.c  busybox-link.c  busybox-make.c  busyboxcmds.h  bzcat.c  bzip2.c  cal.c  cat.c  cdrop.c  chattr.c  chmod.c  cksum.c  clear.c  cmp.c  comm.c  cp.c  cpio.c  crc32.c  cut.c  date.c  dc.c  dd.c  df.c  diff.c  dirname.c  dos2unix.c  dpkg-deb.c  dpkg.c  drop.c  (+129 more)
shim/: shim.c  shim.h  shim.rc
